# soulcode_test

./: .cz-config.js  .czrc  .dockerignore  .env.example  .env.prod  .gitignore  .simple-git-hooks.js  Dockerfile  Makefile  README.md  commitlint.config.js  docker-compose.devcontainer.yml  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
backend/: __init__.py
backend/apps/SoulCodeWebApp/SoulCodeApp/: README.md  manage.py  setup.py  test_flow-deployment.yaml
backend/apps/SoulCodeWebApp/SoulCodeApp/myapi/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/apps/SoulCodeWebApp/SoulCodeApp/workflows/: Text Stands (PromptPathway).xlsx  apps.py  example-deployment.yaml  marvinai.py  models.py  replica_work.py
backend/apps/SoulCodeWebApp/SoulCodeApp/workflows/management/commands/: prefectcli.py
backend/apps/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
backend/apps/core/: apps.py  tasks.py  urls.py  views.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/core/templatetags/: admin_soft.py
backend/apps/users/: adapters.py  admin.py  apps.py  models.py  tasks.py  urls.py
backend/apps/users/api/: serializers.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
backend/apps/workflows/: apps.py  test_flow-deployment.yaml
backend/config/: api_router.py  asgi.py  celery_app.py  urls.py  views.py  wsgi.py
backend/config/settings/: base.py  local.py
backend/www/static/assets/css/: soft-ui-dashboard-tailwind.css
backend/www/templates/: 403.html  403_csrf.html  404.html  500.html
backend/www/templates/account/: base.html  login.html  password_reset.html  password_reset_done.html  signup.html
backend/www/templates/includes/: menu-list.html  nav-item.html  navigation-shadow.html  navigation.html
nginx/dev/: dev.conf  local.conf
nginx/devcontainer/: nginx.conf
